--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <h1>Notes App</h1>
     <div id="main-container">
-      
+      <input type="text" id="user-input" />
+      <button id="add-button">Add Note</button>
     </div>
 
 
